// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI スナップショット > Home > ダークモード 1`] = `
<div
  class="home dark"
>
  <header
    class="home-header"
  >
    <div
      class="home-title"
    >
      <h1>
        react-
        <span>
          tools
        </span>
      </h1>
      <p>
        16
         tool
        s
         available
      </p>
    </div>
    <div
      class="home-header-actions"
    >
      <button
        aria-pressed="false"
        class="home-edit-btn "
      >
        編集
      </button>
    </div>
  </header>
  <div
    class="home-grid"
  >
    <a
      class="home-card"
      data-discover="true"
      href="/oneshot"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ff2d7b, #a855f7);"
      >
        ⚡
      </div>
      <div
        class="home-card-name"
      >
        OneShot
      </div>
      <div
        class="home-card-desc"
      >
        プロンプトを保存・編集・蒸留・検証する1画面ツール
      </div>
      <span
        class="home-card-tag"
      >
        prompt
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/phantom"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #00ffe7, #0a5eaa);"
      >
        🪄
      </div>
      <div
        class="home-card-name"
      >
        Phantom
      </div>
      <div
        class="home-card-desc"
      >
        KMP置換・LCGランダム変換によるテキストマスクツール
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/forge"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        ⚒️
      </div>
      <div
        class="home-card-name"
      >
        Forge
      </div>
      <div
        class="home-card-desc"
      >
        PascalCase / camelCase / snake_case / kebab-case 変換 ＋ MDラッパー
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/mermaid"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        📊
      </div>
      <div
        class="home-card-name"
      >
        Mermaid
      </div>
      <div
        class="home-card-desc"
      >
        テンプレート＋カンペ付き Mermaid エディタ。フロー・シーケンス・ER図など7種類
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/romaji"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        あ
      </div>
      <div
        class="home-card-name"
      >
        Romaji
      </div>
      <div
        class="home-card-desc"
      >
        ローマ字をひらがなに変換。変換しない範囲を {} や除外リストで複数指定できる
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/draft"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        ✍️
      </div>
      <div
        class="home-card-name"
      >
        Draft
      </div>
      <div
        class="home-card-desc"
      >
        マインドマップで論点整理 → 文章を組み立て → チャット適性指標でチェック
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/stencil"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6366f1, #a855f7);"
      >
        📋
      </div>
      <div
        class="home-card-name"
      >
        Stencil
      </div>
      <div
        class="home-card-desc"
      >
        %%PLACEHOLDER%%形式の変数テンプレートに値を流し込み、安定フォーマットでドキュメント作成
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/logtree"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        🌳
      </div>
      <div
        class="home-card-name"
      >
        LogTree
      </div>
      <div
        class="home-card-desc"
      >
        インデントテキストをロジックツリーSVGに変換。右向き・下向きに対応
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/bookmarks"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        🔖
      </div>
      <div
        class="home-card-name"
      >
        Bookmarks
      </div>
      <div
        class="home-card-desc"
      >
        URLをタグ付きで保存・検索。JSONファイルでインポート/エクスポート
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/snip"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #7c6cff, #a855f7);"
      >
        ✂️
      </div>
      <div
        class="home-card-name"
      >
        Snip
      </div>
      <div
        class="home-card-desc"
      >
        テキストを登録してワンクリックでコピー。検索対応のシンプルスニペット管理
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/wordmemo"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #10b981, #6366f1);"
      >
        📚
      </div>
      <div
        class="home-card-name"
      >
        WordMemo
      </div>
      <div
        class="home-card-desc"
      >
        気になった単語をメモして、AIエージェント向け文献リサーチプロンプトを生成
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/errlog"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ef4444, #f97316);"
      >
        🐛
      </div>
      <div
        class="home-card-name"
      >
        ErrLog
      </div>
      <div
        class="home-card-desc"
      >
        エラーを貼り付けてLLM向けプロンプトを生成。返答をMermaid付きで記録・再利用
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/diary"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #d97706, #f59e0b);"
      >
        📔
      </div>
      <div
        class="home-card-name"
      >
        Diary
      </div>
      <div
        class="home-card-desc"
      >
        日記を書いて箇条書きに変換。LLMでサマリ・キーワードを生成してASCII art形式の.txtで保存
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/sketch"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #8b5cf6, #6366f1);"
      >
        🖊
      </div>
      <div
        class="home-card-name"
      >
        Sketch
      </div>
      <div
        class="home-card-desc"
      >
        フロー・ステートマシン・グラフを雑な記述で素早く描く。SVG/PNGでエクスポート
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/commit"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #15803d, #22c55e);"
      >
        🔖
      </div>
      <div
        class="home-card-name"
      >
        Commit
      </div>
      <div
        class="home-card-desc"
      >
        type(scope): desc 形式のコミットメッセージを組み立て。type・scope・description の履歴をJSON保存
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/pad"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6b7280, #9ca3af);"
      >
        📄
      </div>
      <div
        class="home-card-name"
      >
        Pad
      </div>
      <div
        class="home-card-desc"
      >
        ただのテキストパッド。書いた内容は自動保存される。
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
  </div>
</div>
`;

exports[`UI スナップショット > Home > ライトモード 1`] = `
<div
  class="home light"
>
  <header
    class="home-header"
  >
    <div
      class="home-title"
    >
      <h1>
        react-
        <span>
          tools
        </span>
      </h1>
      <p>
        16
         tool
        s
         available
      </p>
    </div>
    <div
      class="home-header-actions"
    >
      <button
        aria-pressed="false"
        class="home-edit-btn "
      >
        編集
      </button>
    </div>
  </header>
  <div
    class="home-grid"
  >
    <a
      class="home-card"
      data-discover="true"
      href="/oneshot"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ff2d7b, #a855f7);"
      >
        ⚡
      </div>
      <div
        class="home-card-name"
      >
        OneShot
      </div>
      <div
        class="home-card-desc"
      >
        プロンプトを保存・編集・蒸留・検証する1画面ツール
      </div>
      <span
        class="home-card-tag"
      >
        prompt
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/phantom"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #00ffe7, #0a5eaa);"
      >
        🪄
      </div>
      <div
        class="home-card-name"
      >
        Phantom
      </div>
      <div
        class="home-card-desc"
      >
        KMP置換・LCGランダム変換によるテキストマスクツール
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/forge"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        ⚒️
      </div>
      <div
        class="home-card-name"
      >
        Forge
      </div>
      <div
        class="home-card-desc"
      >
        PascalCase / camelCase / snake_case / kebab-case 変換 ＋ MDラッパー
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/mermaid"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        📊
      </div>
      <div
        class="home-card-name"
      >
        Mermaid
      </div>
      <div
        class="home-card-desc"
      >
        テンプレート＋カンペ付き Mermaid エディタ。フロー・シーケンス・ER図など7種類
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/romaji"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #a855f7, #6366f1);"
      >
        あ
      </div>
      <div
        class="home-card-name"
      >
        Romaji
      </div>
      <div
        class="home-card-desc"
      >
        ローマ字をひらがなに変換。変換しない範囲を {} や除外リストで複数指定できる
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/draft"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        ✍️
      </div>
      <div
        class="home-card-name"
      >
        Draft
      </div>
      <div
        class="home-card-desc"
      >
        マインドマップで論点整理 → 文章を組み立て → チャット適性指標でチェック
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/stencil"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6366f1, #a855f7);"
      >
        📋
      </div>
      <div
        class="home-card-name"
      >
        Stencil
      </div>
      <div
        class="home-card-desc"
      >
        %%PLACEHOLDER%%形式の変数テンプレートに値を流し込み、安定フォーマットでドキュメント作成
      </div>
      <span
        class="home-card-tag"
      >
        text
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/logtree"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #0d9488, #6366f1);"
      >
        🌳
      </div>
      <div
        class="home-card-name"
      >
        LogTree
      </div>
      <div
        class="home-card-desc"
      >
        インデントテキストをロジックツリーSVGに変換。右向き・下向きに対応
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/bookmarks"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #f97316, #ef4444);"
      >
        🔖
      </div>
      <div
        class="home-card-name"
      >
        Bookmarks
      </div>
      <div
        class="home-card-desc"
      >
        URLをタグ付きで保存・検索。JSONファイルでインポート/エクスポート
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/snip"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #7c6cff, #a855f7);"
      >
        ✂️
      </div>
      <div
        class="home-card-name"
      >
        Snip
      </div>
      <div
        class="home-card-desc"
      >
        テキストを登録してワンクリックでコピー。検索対応のシンプルスニペット管理
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/wordmemo"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #10b981, #6366f1);"
      >
        📚
      </div>
      <div
        class="home-card-name"
      >
        WordMemo
      </div>
      <div
        class="home-card-desc"
      >
        気になった単語をメモして、AIエージェント向け文献リサーチプロンプトを生成
      </div>
      <span
        class="home-card-tag"
      >
        util
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/errlog"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #ef4444, #f97316);"
      >
        🐛
      </div>
      <div
        class="home-card-name"
      >
        ErrLog
      </div>
      <div
        class="home-card-desc"
      >
        エラーを貼り付けてLLM向けプロンプトを生成。返答をMermaid付きで記録・再利用
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/diary"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #d97706, #f59e0b);"
      >
        📔
      </div>
      <div
        class="home-card-name"
      >
        Diary
      </div>
      <div
        class="home-card-desc"
      >
        日記を書いて箇条書きに変換。LLMでサマリ・キーワードを生成してASCII art形式の.txtで保存
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/sketch"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #8b5cf6, #6366f1);"
      >
        🖊
      </div>
      <div
        class="home-card-name"
      >
        Sketch
      </div>
      <div
        class="home-card-desc"
      >
        フロー・ステートマシン・グラフを雑な記述で素早く描く。SVG/PNGでエクスポート
      </div>
      <span
        class="home-card-tag"
      >
        diagram
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/commit"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #15803d, #22c55e);"
      >
        🔖
      </div>
      <div
        class="home-card-name"
      >
        Commit
      </div>
      <div
        class="home-card-desc"
      >
        type(scope): desc 形式のコミットメッセージを組み立て。type・scope・description の履歴をJSON保存
      </div>
      <span
        class="home-card-tag"
      >
        dev
      </span>
    </a>
    <a
      class="home-card"
      data-discover="true"
      href="/pad"
    >
      <div
        class="home-card-icon"
        style="background: linear-gradient(135deg, #6b7280, #9ca3af);"
      >
        📄
      </div>
      <div
        class="home-card-name"
      >
        Pad
      </div>
      <div
        class="home-card-desc"
      >
        ただのテキストパッド。書いた内容は自動保存される。
      </div>
      <span
        class="home-card-tag"
      >
        write
      </span>
    </a>
  </div>
</div>
`;

exports[`UI スナップショット > OneShot > ダークモード（空の状態） 1`] = `
<div
  class="oneshot dark"
>
  <header
    class="os-header"
  >
    <div
      class="os-logo"
    >
      <div
        class="os-logo-icon"
      >
        <svg
          fill="none"
          height="28"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="28"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <h1>
        <span
          class="accent"
        >
          Zero
        </span>
        <span
          class="shot"
        >
          Shot
        </span>
      </h1>
      <span
        class="os-count-badge"
      >
        0
         prompts
      </span>
    </div>
    <div
      class="os-toolbar"
    >
      <button
        class="os-btn os-btn-pink"
      >
        <svg
          fill="currentColor"
          height="14"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M12 2l2.09 6.26L20.18 10l-6.09 1.74L12 18l-2.09-6.26L3.82 10l6.09-1.74L12 2z"
          />
          <path
            d="M19 15l1.04 3.13L23.18 19l-3.14.87L19 23l-1.04-3.13L14.82 19l3.14-.87L19 15z"
            opacity="0.7"
          />
        </svg>
         
        ZERO
         DISTILL
      </button>
      <button
        class="os-btn os-btn-ghost "
        title="ゴミ箱"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <polyline
            points="3 6 5 6 21 6"
          />
          <path
            d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="17 8 12 3 7 8"
          />
          <line
            x1="12"
            x2="12"
            y1="3"
            y2="15"
          />
        </svg>
      </button>
    </div>
  </header>
  <button
    class="os-btn os-btn-purple"
    style="margin-bottom: 16px; width: 100%; justify-content: center;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
    </svg>
     新しいプロンプトを追加
  </button>
  <div
    class="os-filter-bar"
  >
    <button
      class="os-btn os-btn-sm os-btn-purple"
    >
      すべて
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未送信
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      送信済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      解決済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未解決
    </button>
  </div>
  <div
    class="os-bubble-list"
  >
    <div
      class="os-empty"
    >
      <div
        class="os-empty-icon"
      >
        <svg
          fill="none"
          height="48"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="48"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <p>
        <strong>
          プロンプトがまだありません
        </strong>
      </p>
      <p>
        上の「新しいプロンプトを追加」から始めましょう
      </p>
    </div>
  </div>
</div>
`;

exports[`UI スナップショット > OneShot > ライトモード（空の状態） 1`] = `
<div
  class="oneshot light"
>
  <header
    class="os-header"
  >
    <div
      class="os-logo"
    >
      <div
        class="os-logo-icon"
      >
        <svg
          fill="none"
          height="28"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="28"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <h1>
        <span
          class="accent"
        >
          Zero
        </span>
        <span
          class="shot"
        >
          Shot
        </span>
      </h1>
      <span
        class="os-count-badge"
      >
        0
         prompts
      </span>
    </div>
    <div
      class="os-toolbar"
    >
      <button
        class="os-btn os-btn-pink"
      >
        <svg
          fill="currentColor"
          height="14"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M12 2l2.09 6.26L20.18 10l-6.09 1.74L12 18l-2.09-6.26L3.82 10l6.09-1.74L12 2z"
          />
          <path
            d="M19 15l1.04 3.13L23.18 19l-3.14.87L19 23l-1.04-3.13L14.82 19l3.14-.87L19 15z"
            opacity="0.7"
          />
        </svg>
         
        ZERO
         DISTILL
      </button>
      <button
        class="os-btn os-btn-ghost "
        title="ゴミ箱"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <polyline
            points="3 6 5 6 21 6"
          />
          <path
            d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="7 10 12 15 17 10"
          />
          <line
            x1="12"
            x2="12"
            y1="15"
            y2="3"
          />
        </svg>
      </button>
      <button
        class="os-btn os-btn-ghost"
      >
        <svg
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
        >
          <path
            d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"
          />
          <polyline
            points="17 8 12 3 7 8"
          />
          <line
            x1="12"
            x2="12"
            y1="3"
            y2="15"
          />
        </svg>
      </button>
    </div>
  </header>
  <button
    class="os-btn os-btn-purple"
    style="margin-bottom: 16px; width: 100%; justify-content: center;"
  >
    <svg
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
    >
      <line
        x1="12"
        x2="12"
        y1="5"
        y2="19"
      />
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
    </svg>
     新しいプロンプトを追加
  </button>
  <div
    class="os-filter-bar"
  >
    <button
      class="os-btn os-btn-sm os-btn-purple"
    >
      すべて
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未送信
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      送信済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      解決済み
    </button>
    <button
      class="os-btn os-btn-sm os-btn-ghost"
    >
      未解決
    </button>
  </div>
  <div
    class="os-bubble-list"
  >
    <div
      class="os-empty"
    >
      <div
        class="os-empty-icon"
      >
        <svg
          fill="none"
          height="48"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="48"
        >
          <polygon
            fill="currentColor"
            points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
          />
        </svg>
      </div>
      <p>
        <strong>
          プロンプトがまだありません
        </strong>
      </p>
      <p>
        上の「新しいプロンプトを追加」から始めましょう
      </p>
    </div>
  </div>
</div>
`;

exports[`UI スナップショット > Phantom > ダークモード 1`] = `
<div
  class="ph-root dark"
>
  <header
    class="ph-header"
  >
    <div>
      <div
        class="ph-logo"
      >
        PHANTOM
      </div>
      <div
        class="ph-subtitle"
      >
        text mask & transform engine
      </div>
    </div>
  </header>
  <div
    class="ph-main"
  >
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        INPUT
      </div>
      <textarea
        class="ph-input"
        placeholder="テキストを入力..."
      />
    </div>
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        OUTPUT
      </div>
      <div
        class="ph-output-wrap"
      >
        <div
          class="ph-output"
        />
        <button
          class="ph-copy-btn"
        >
          コピー
        </button>
      </div>
    </div>
    <div
      class="ph-rules-panel"
    >
      <div
        class="ph-tabs"
      >
        <button
          class="ph-tab active"
        >
          置換
        </button>
        <button
          class="ph-tab"
        >
          ランダム
        </button>
      </div>
      <div
        class="ph-pair-row"
      >
        <input
          class="ph-field"
          placeholder="変換前"
          value=""
        />
        <span
          class="ph-arrow"
        >
          →
        </span>
        <input
          class="ph-field"
          placeholder="変換後"
          value=""
        />
        <button
          aria-label="ペアを削除"
          class="ph-del-btn"
        >
          ×
        </button>
      </div>
      <button
        class="ph-add-btn"
      >
        ＋ ペアを追加
      </button>
    </div>
  </div>
</div>
`;

exports[`UI スナップショット > Phantom > ライトモード 1`] = `
<div
  class="ph-root light"
>
  <header
    class="ph-header"
  >
    <div>
      <div
        class="ph-logo"
      >
        PHANTOM
      </div>
      <div
        class="ph-subtitle"
      >
        text mask & transform engine
      </div>
    </div>
  </header>
  <div
    class="ph-main"
  >
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        INPUT
      </div>
      <textarea
        class="ph-input"
        placeholder="テキストを入力..."
      />
    </div>
    <div
      class="ph-panel"
    >
      <div
        class="ph-panel-label"
      >
        OUTPUT
      </div>
      <div
        class="ph-output-wrap"
      >
        <div
          class="ph-output"
        />
        <button
          class="ph-copy-btn"
        >
          コピー
        </button>
      </div>
    </div>
    <div
      class="ph-rules-panel"
    >
      <div
        class="ph-tabs"
      >
        <button
          class="ph-tab active"
        >
          置換
        </button>
        <button
          class="ph-tab"
        >
          ランダム
        </button>
      </div>
      <div
        class="ph-pair-row"
      >
        <input
          class="ph-field"
          placeholder="変換前"
          value=""
        />
        <span
          class="ph-arrow"
        >
          →
        </span>
        <input
          class="ph-field"
          placeholder="変換後"
          value=""
        />
        <button
          aria-label="ペアを削除"
          class="ph-del-btn"
        >
          ×
        </button>
      </div>
      <button
        class="ph-add-btn"
      >
        ＋ ペアを追加
      </button>
    </div>
  </div>
</div>
`;
